// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemGroup > Item > should read the value of the size prop from context when the prop is not defined 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -8,11 +8,11 @@
      <div
        class="emotion-diff-1-itemWrapper"
        role="listitem"
      >
        <div
-         class="emotion-diff-2-medium emotion-diff-3-item emotion-diff-4-spacedAround components-item"
+         class="emotion-diff-6-large emotion-diff-3-item emotion-diff-4-spacedAround components-item"
          data-wp-c16t="true"
          data-wp-component="Item"
        >
          Code
        </div>
@@ -20,11 +20,11 @@
      <div
        class="emotion-diff-1-itemWrapper"
        role="listitem"
      >
        <div
-         class="emotion-diff-2-medium emotion-diff-3-item emotion-diff-4-spacedAround components-item"
+         class="emotion-diff-6-large emotion-diff-3-item emotion-diff-4-spacedAround components-item"
          data-wp-c16t="true"
          data-wp-component="Item"
        >
          Is
        </div>
`;

exports[`ItemGroup > Item > should use different amounts of padding depending on the value of the size prop 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    <div
      class="emotion-diff-0-itemWrapper"
      role="listitem"
    >
      <div
-       class="emotion-diff-1-medium emotion-diff-2-item components-item"
+       class="emotion-diff-3-large emotion-diff-2-item components-item"
        data-wp-c16t="true"
        data-wp-component="Item"
      >
        Code is poetry
      </div>
`;

exports[`ItemGroup > ItemGroup component > should render correctly 1`] = `
.emotion-0 {
  border-radius: 2px;
}

.emotion-0>*:first-of-type>* {
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.emotion-0>*:last-of-type>* {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-1 {
  width: 100%;
  display: block;
}

.emotion-2 {
  padding: calc((36px - calc(13px * 1.4) - 2px) / 2) 12px;
}

.emotion-3 {
  box-sizing: border-box;
  width: 100%;
  display: block;
  margin: 0;
  color: inherit;
}

.emotion-4 {
  border-radius: 2px;
}

<div>
  <div
    class="emotion-0 components-item-group"
    data-wp-c16t="true"
    data-wp-component="ItemGroup"
    role="list"
  >
    <div
      class="emotion-1"
      role="listitem"
    >
      <div
        class="emotion-2 emotion-3 emotion-4 components-item"
        data-wp-c16t="true"
        data-wp-component="Item"
      >
        Code is poetry
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemGroup > ItemGroup component > should render items individually when the isSeparated prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,18 +1,18 @@
  <div>
    <div
-     class="emotion-diff-0-rounded components-item-group"
+     class="emotion-diff-5-separated emotion-diff-0-rounded components-item-group"
      data-wp-c16t="true"
      data-wp-component="ItemGroup"
      role="list"
    >
      <div
        class="emotion-diff-1-itemWrapper"
        role="listitem"
      >
        <div
-         class="emotion-diff-2-medium emotion-diff-3-item emotion-diff-4-spacedAround components-item"
+         class="emotion-diff-2-medium emotion-diff-3-item components-item"
          data-wp-c16t="true"
          data-wp-component="Item"
        >
          Code is poetry
        </div>
`;

exports[`ItemGroup > ItemGroup component > should show borders when the isBordered prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,18 +1,18 @@
  <div>
    <div
-     class="emotion-diff-0-rounded components-item-group"
+     class="emotion-diff-5-bordered emotion-diff-0-rounded components-item-group"
      data-wp-c16t="true"
      data-wp-component="ItemGroup"
      role="list"
    >
      <div
        class="emotion-diff-1-itemWrapper"
        role="listitem"
      >
        <div
-         class="emotion-diff-2-medium emotion-diff-3-item emotion-diff-4-spacedAround components-item"
+         class="emotion-diff-2-medium emotion-diff-3-item components-item"
          data-wp-c16t="true"
          data-wp-component="Item"
        >
          Code is poetry
        </div>
`;

exports[`ItemGroup > ItemGroup component > should show rounded corners when the isRounded prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="emotion-diff-0-rounded components-item-group"
+     class="components-item-group"
      data-wp-c16t="true"
      data-wp-component="ItemGroup"
      role="list"
    >
      <div
`;
